# OnlineShop_2025

./: README.md
accounts/: models.py  urls.py
cart/: views.py
catalog/: filters.py  urls.py
catalog/management/commands/: fetch_product_images.py
orders/: admin.py
project/: settings.py  urls.py
reviews/: admin.py  models.py
rozetka_mini/: CREDITS.md  pyproject.toml
rozetka_mini/accounts/: admin.py  views.py
rozetka_mini/cart/: urls.py
rozetka_mini/catalog/: admin.py  models.py  views.py
rozetka_mini/catalog/fixtures/: initial_data.json
rozetka_mini/core/: context_processors.py  urls.py  views.py
rozetka_mini/orders/: models.py  urls.py  views.py
rozetka_mini/reviews/: urls.py  views.py
rozetka_mini/shops/: urls.py
rozetka_mini/templates/: base.html
rozetka_mini/templates/cart/: cart.html
rozetka_mini/templates/reviews/: create_review.html
rozetka_mini/templates/shops/: edit_shop.html
shops/: admin.py  apps.py  models.py  views.py
static/css/: theme.css
templates/accounts/: login.html  signup.html
templates/catalog/: product_detail.html  product_list.html
templates/orders/: checkout.html
templates/shops/: my_shop.html
